# PGSI

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  README_PACKAGE_CONVERSION_PLAN.md  TEST_RESULTS.md  github_issues.md  m.md  pyproject.toml  pypy.txt
__audit/: methodology_attribution_outcomes.md
audit/: architecture.md  cross_platform_compliance_matrix.md  energy_fallback_codecarbon_cpu_power_audit.md  final_summary.md  full_codebase_audit_2026-05-05.md  functional_overview.md  release_readiness_checklist.md  usage_guide.md
audit_old/: architecture.md  contributor_guide.md  final_summary.md  next_steps_roadmap.md  spike_4_runs_and_permissions.md  testing_and_health.md
benchmarks/Binary-trees/Ctypes/: main.py
benchmarks/Binary-trees/Cython/: main.py
benchmarks/FASTA/Ctypes/: main.py
benchmarks/Fannkuch-Redux/py_compile/: main.py
benchmarks/K-Nucleotide/Ctypes/: main.py
benchmarks/K-Nucleotide/PyPy/: main.py
benchmarks/KNN/Cpython/: main.py
benchmarks/KNN/Ctypes/: main.py
docs/: end_to_end_benchmark_guide.md  getting_started.md
docs/architecture/: CHANGES.md  README.md  architecture_latex_validation.md
docs/source/: architecture.rst  conf.py  getting_started.rst  index.rst
errors/: ctypes_included_error.txt  ctypes_only_errors.txt  cython_included_error.txt  error_new.txt  only_cpython_all_algo_error.txt  only_cython_error.txt  py_compile_error.txt  py_compile_included_error.txt  pypy_included_error.txt
issue_tracker/: README.md  issue-001.md  issue-002.md  issue-003.md  issue-004.md  issue-005.md  issue-006.md  issue-007.md  issue-008.md  issue-009.md  issue-010.md  issue-011.md  issue-012.md  issue-013.md
scripts/: copy_benchmarks_to_package.py
src/pgsi_analyzer/: __init__.py  config.py
test_result/: README.md  README_issue_003.md  README_issue_004.md  README_issue_005.md  README_issue_006.md  README_issue_007.md  README_issue_008.md  README_issue_009.md  README_issue_011.md  README_issue_012.md  README_issue_013.md  all_tests.xml  all_tests_summary.txt  cli_coverage.txt  cli_tests.xml  cli_tests_output.txt  coverage_all_summary.txt  estimation_coverage.txt  estimation_tests.xml  estimation_tests_output.txt  estimation_verification_demo.py  estimation_verification_output.txt  issue_003_summary.md  issue_004_summary.md  issue_005_summary.md  issue_006_summary.md  issue_007_summary.md  issue_008_summary.md  issue_009_summary.md  issue_011_summary.md  issue_012_summary.md  issue_013_summary.md  issues_7_9_13_tests.xml  issues_7_9_13_tests_output.txt  issues_7_9_13_validation_summary.md  measurement_coverage.txt  measurement_tests.xml  measurement_tests_output.txt  measurement_verification_demo.py  measurement_verification_output.txt  (+12 more)
tests/: test_benchmark_builder.py  test_benchmark_discovery.py  test_benchmark_executor.py  test_benchmark_orchestrator.py  test_benchmark_provider.py  test_benchmarks_registry.py  test_cli.py  test_cli_benchmark.py  test_config.py  test_cpu_power_resolver.py  test_energy_crossplatform.py  test_estimation_duration.py  test_estimators.py  test_measurement.py  test_models.py  test_platform.py  test_results_collector.py  test_statistics.py  test_utils.py
tests/audit/: __init__.py  test_audit_report.py  test_greenscore_integrity.py  test_naming_integrity.py
(+182 files in other folders)
